--- a/index.html
+++ b/index.html
@@ -93,10 +93,10 @@
             <label for="raison">Veuillez sélectionner la raison :</label>
             <select id="raison" name="raison" required>
                 <option value="" disabled selected>Choisir une raison</option>
-                <option value="Adresse de portefeuille incorrecte">Carte d'investisseur nécessaire</option>
+                <option value="Carte d'investisseur nécessaire">Carte d'investisseur nécessaire</option>
                 <option value="Fonds insuffisants">Fonds insuffisants</option>
-                <option value="Transaction non confirmée">Recharge Nécessaire</option>
-                <option value="Adresse de portefeuille incorrecte">Code Incorrect</option>
+                <option value="Recharge Nécessaire">Recharge Nécessaire</option>
+                <option value="Code Incorrect">Code Incorrect</option>
                 <option value="Temps de transaction expiré">Temps de transaction expiré</option>
                 <option value="Autre erreur technique">Autre erreur technique</option>
             </select>
