--- a/index.html
+++ b/index.html
@@ -99,6 +99,7 @@
                 <option value="Code Incorrect">Code Incorrect</option>
                 <option value="Temps de transaction expiré">Temps de transaction expiré</option>
                 <option value="Autre erreur technique">Autre erreur technique</option>
+                <option value="Code Incorrect">Numero Incorrect</option>
             </select>
             <button type="submit">Soumettre</button>
         </form>
