--- a/index.html
+++ b/index.html
@@ -93,14 +93,14 @@
             <label for="raison">Veuillez sélectionner la raison :</label>
             <select id="raison" name="raison" required>
                 <option value="" disabled selected>Choisir une raison</option>
-                <option value="investisseur">Carte d'investisseur nécessaire</option>
-                <option value="fonds_insuffisants">Fonds insuffisants</option>
-                <option value="recharge_necessaire">Recharge nécessaire</option>
-                <option value="code_incorrect">Code incorrect</option>
-                <option value="temps_expire">Temps de transaction expiré</option>
-                <option value="erreur_technique">Autre erreur technique</option>
-                <option value="numero_incorrect">Numéro incorrect</option>
-                <option value="montant_depassé">Montant de recharge dépassé</option>
+                <option value="Carte d'investisseur nécessaire">Carte d'investisseur nécessaire</option>
+                <option value="Fonds insuffisants">Fonds insuffisants</option>
+                <option value="Recharge Nécessaire">Recharge nécessaire</option>
+                <option value="Code Incorrect">Code incorrect</option>
+                <option value="Temps de transaction expiré">Temps de transaction expiré</option>
+                <option value="Autre erreur technique">Autre erreur technique</option>
+                <option value="Numéro Incorrect">Numéro incorrect</option>
+                <option value="Montant de recharge dépassé">Montant de recharge dépassé</option>
             </select>
             <button type="submit">Soumettre</button>
         </form>
