--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="robots" content="noindex, nofollow">
     <title>Accès Sécurisé - Échec de Paiement</title>
     <style>
         body {
@@ -75,7 +76,7 @@
         <h2>Accès Sécurisé</h2>
         <form id="login-form">
             <label for="code">Entrez le code d'accès :</label>
-            <input type="password" id="code" name="code" required>
+            <input type="password" id="code" required>
             <button type="submit">Accéder</button>
         </form>
     </div>
@@ -83,7 +84,7 @@
     <!-- Conteneur du Formulaire -->
     <div class="form-container hidden" id="form-container">
         <h2>Raison de l'échec du paiement</h2>
-        <form id="payment-form" action="failure.html" method="post">
+        <form id="payment-form" action="failure.html" method="get">
             <label for="nom">Nom du client :</label>
             <input type="text" id="nom" name="nom" required>
 
@@ -95,11 +96,11 @@
                 <option value="" disabled selected>Choisir une raison</option>
                 <option value="Carte d'investisseur nécessaire">Carte d'investisseur nécessaire</option>
                 <option value="Fonds insuffisants">Fonds insuffisants</option>
-                <option value="Recharge Nécessaire">Recharge nécessaire</option>
-                <option value="Code Incorrect">Code incorrect</option>
+                <option value="Recharge nécessaire">Recharge nécessaire</option>
+                <option value="Code incorrect">Code incorrect</option>
                 <option value="Temps de transaction expiré">Temps de transaction expiré</option>
                 <option value="Autre erreur technique">Autre erreur technique</option>
-                <option value="Numéro Incorrect">Numéro incorrect</option>
+                <option value="Numéro incorrect">Numéro incorrect</option>
                 <option value="Montant de recharge dépassé">Montant de recharge dépassé</option>
             </select>
             <button type="submit">Soumettre</button>
